# rmote

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  main.rs
